--- a/02_testetoperateurs.html
+++ b/02_testetoperateurs.html
@@ -60,6 +60,16 @@
 	//seuil3 = 40000, taux = 0.2
 	//Au-dessus 40000 taux = 0.5	
 	
+	//if impot < 15000
+	//switch impot>15000 && impot <25000
+	//taux = impot * 0.1
+	//switch case impot >25000 && <40000
+	//taux = impot * 0.2
+	//case impot >40000
+	//taux = impot * 0.5
+	
+	//logout taux
+	
 </script>
 <body>
 
